--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,31 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700');
+body {
+    font-family: 'Roboto', sans-serif!important;
+}
+
+.btn-success {
+    background-color: #00e676!important;
+    border-color: #00e676!important;
+}
+
+.btn-secondary {
+    background-color: #b0bec5!important;
+    border-color: #b0bec5!important;
+    color: #fff!important;
+}
+
+.badge-danger {
+    background-color: #f50057!important;
+}
+
+.card {
+    box-shadow: 0 20px 40px -20px rgba(0, 0, 0, .1);
+    border-radius: 10px;
+}
+
+label {
+    font-weight: bold;
+    font-size: 13px;
+}
