--- a/src/app/formulario/formulario.component.html
+++ b/src/app/formulario/formulario.component.html
@@ -1,4 +1,4 @@
-<div class="fixed">
+<!-- <div class="fixed">
     <div class="card">
         <h5 class="card-header">Registrar nueva persona:</h5>
         <div class="card-body">
@@ -55,4 +55,58 @@
             </div>
         </div>
     </div>
+</div> -->
+
+<div class="fixed">
+  <div class="card">
+      <h5 class="card-header">Registrar nueva persona:</h5>
+      <div class="card-body">
+          <div class="container-form">
+              <form novalidate="" (ngSubmit)="guardarRegistro()" [formGroup]="crearCuenta">
+                  <div class="form-row">
+                      <div class="form-group col-md-6">
+                          <label>Nombre:</label>
+                          <input type="text" class="form-control" [formControl]="usuario.nombre">
+                      </div>
+                      <div class="form-group col-md-6">
+                          <label>Apellido:</label>
+                          <input type="text" class="form-control" [formControl]="usuario.apellido">
+                      </div>
+                  </div>
+                  <div class="form-row">
+                      <div class="form-group col-md-6">
+                          <label>Cédula:</label>
+                          <input type="text" class="form-control" [formControl]="usuario.cedula">
+                      </div>
+                      <div class="form-group col-md-6">
+                          <label>Edad:</label>
+                          <input type="text" class="form-control" [formControl]="usuario.edad">
+                      </div>
+                  </div>
+                  <div class="form-group">
+                      <label>Email:</label>
+                      <input type="email" class="form-control" placeholder="Correo electrónico" [formControl]="usuario.correoElectronico">
+                  </div>
+                  <div class="form-row">
+                      <div class="form-group col-md-6">
+                          <label>Teléfono</label>
+                          <input type="text" class="form-control" [formControl]="usuario.telefono">
+                      </div>
+                      <div class="form-group col-md-6">
+                          <label>Tipo de pase:</label>
+                          <select class="form-control" [formControl]="usuario.tipoPase">
+                              <option *ngFor="let pase of listaPases">{{pase}}</option>
+
+                          </select>
+                      </div>
+                  </div>
+
+                  <div class="button-container">
+                      <button type="submit" class="btn btn-success" [disabled]="!crearCuenta.valid">Guardar</button>
+                      <button type="button" class="btn btn-secondary" (click)="limpiarFormulario()">Cancelar</button>
+                  </div>
+              </form>
+          </div>
+      </div>
+  </div>
 </div>
