--- a/src/app/lista/lista.component.html
+++ b/src/app/lista/lista.component.html
@@ -3,26 +3,14 @@
     <div class="card-body">
         <h5 class="card-title">
             <span>Participantes Registrados:</span>
-            <span class="badge badge-pill badge-danger" title="Borrar todos los registros"> <i class="fas fa-trash-alt"></i></span>
+            <span class="badge badge-pill badge-danger" title="Borrar todos los registros" (click)="borrarTodo()"> <i class="fas fa-trash-alt"></i></span>
         </h5>
         <hr>
         <ul class="list-group lista">
-            <li class="list-group-item active">
-                <span>Dapibus ac facilisis indf</span>
-                <span class="badge badge-primary badge-pill"><i class="fas fa-edit"></i></span>
+            <li class="list-group-item" *ngFor="let registro of listaUsuarios; let i=index" [ngClass]="{active: i==0}">
+                <span>{{registro.nombre}} {{registro.apellido}} / {{registro.cedula}}</span>
+                <span class="badge badge-primary badge-pill" *ngIf="i==0" (click)="editarRegistro(registro, i)"><i class="fas fa-edit"></i></span>
             </li>
-            <li class="list-group-item">Dapibus ac facilisis in</li>
-            <li class="list-group-item">Morbi leo risus</li>
-            <li class="list-group-item">Porta ac consectetur ac</li>
-            <li class="list-group-item">Vestibulum at eros</li>
-            <li class="list-group-item">Dapibus ac facilisis in</li>
-            <li class="list-group-item">Morbi leo risus</li>
-            <li class="list-group-item">Porta ac consectetur ac</li>
-            <li class="list-group-item">Vestibulum at eros</li>
-            <li class="list-group-item">Dapibus ac facilisis in</li>
-            <li class="list-group-item">Morbi leo risus</li>
-            <li class="list-group-item">Porta ac consectetur ac</li>
-            <li class="list-group-item">Vestibulum at eros</li>
         </ul>
     </div>
 </div>
