--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,3 +42,7 @@
         </div>
     </div>
 </div>
+<div class="footer">
+    <p>Jonathan Dominguez / <a href="https://github.com/JonathanDe" target="_blank">@JonathanDe</a></p>
+    <p>Brian Vanegas / <a href="https://github.com/braian125" target="_blank">@braian125</a></p>
+</div>
